tests/codegen/fail/interface/struct/derive_implementers_duplicate_pretty.stderr
error: duplicated attribute argument found
  --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:10:24
   |
10 | #[graphql(for = [ObjA, ObjA])]
   |                        ^^^^
